# playwright-mcp-usage

./: README.md  main.py  pyproject.toml
src/: main.py  playwright_mcp_host.py  playwright_mcp_host_react_agent.py
src/agent_graph/: agent.py  graph.py  state.py
src/agent_graph/nodes/: __init__.py  node_names.py  reasoning_node.py  tool_use_node.py
src/utils/: get_prompt_with_resume_details.py  read_resume.py
src/utils/llm/: litellm_calls.py  llm_models.py  message_helper.py
