[project]
name = "playwright-mcp-usage"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.27",
    "langchain-mcp-adapters>=0.1.9",
    "langgraph>=0.5.4",
    "litellm>=1.74.8",
    "mcp>=1.12.2",
    "pymupdf>=1.26.3",
    "pypdf2>=3.0.1",
]
